Add labels to axis of SVG graph

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
         <p><input type="button" value="Run Simulation" onclick="initiateSimulation();"></p>
         <div id="graph">
-            <svg id="visualisation" width="500" height="500"></svg>
+            <svg id="visualisation" width="560" height="560" style="padding:30px;"></svg>
         </div>
 
         <div id="simData"></div>
